Added new pages, remove some unncessary stuff.

--- a/new_ticket2.html
+++ b/new_ticket2.html
@@ -59,11 +59,11 @@
 
     <h3>Issue New Ticket</h3>
 
-      <div class="row">
-        <center>
-          <h1>Scan Driver's License</h1>
-        </center>
-      </div>
+      <form>
+        Infraction: <br /> <input type="text" name="infraction">
+        <br /><br />
+        Add Details: <br /> <input type="textarea" rows="5" name="infraction">
+      </form>
 
       <br />
       <br />
@@ -71,14 +71,27 @@
       <div class="row">
         <center>
           <button type="button" class="btn btn-default btn-lg">
-            Enter Information Manually
+            Issue a New Ticket
           </button>
 
           <br />
           <br />
 
           <button type="button" class="btn btn-default btn-lg">
-            Cancel
+            View Old Tickets
+          </button>
+
+          <br />
+          <br />
+          <br />
+          <br />
+
+          <button type="button" class="btn btn-default btn-lg">
+            Back
+          </button>
+          &nbsp; &nbsp; &nbsp;
+          <button type="button" class="btn btn-default btn-lg">
+            Finish
           </button>
 
           </center>
