--- a/find_ticket.html
+++ b/find_ticket.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Ryan Fork</title>
+    <title>Buddy Cops</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -14,12 +14,11 @@
     <!-- Add custom CSS here -->
     <link href="css/modern-business.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="http://www.ryanfork.com/icon.png">
   </head>
 
   <body>
 
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -28,16 +27,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ryanfork.com</a>
+          <a class="navbar-brand" href="index.html">Team Buddy Cops</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="about.html">About</a></li>
             <li><a href="http://blog.ryanfork.com">Blog</a></li>
             <!--<li><a href="development.html">Development</a></li>-->
-            <li class="active"><a href="resume.html">Resume</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -55,35 +54,41 @@
       </div><!-- /.container -->
     </nav>
 
-    <!-- Page Content -->
-
     <div class="container">
-      
+    <center>
+
+    <h3>Issue New Ticket</h3>
+
+      <form>
+        Drivers License Number: <br /> <input type="text" name="infraction">
+        <br /><br />
+        License Plate Number: <br /> <input type="text" name="infraction">
+        <br /><br />
+        Last Name: <br /> <input type="text" name="infraction">
+      </form>
+
+      <br />
+      <br />
+
       <div class="row">
-      
-        <div class="col-lg-12">
-          <h1 class="page-header">Resume <small>Professional Experience</small></h1>
-          <ol class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <li class="active">Resume</li>
-          </ol>
-        </div>
+        <center>
+          <button type="button" class="btn btn-default btn-lg">
+            Home
+          </button>
 
-      </div><!-- /.row -->
+          &nbsp; &nbsp; &nbsp;
 
-      </div><!-- /.row -->
+          <button type="button" class="btn btn-default btn-lg">
+            Get Details
+          </button>
 
-    </div><!-- /.container -->
-
-    <div class="container">
-      <center>
-        <!--<p><embed src="res/Resume-RJF.pdf" width="825px" height="1000px"></p>-->
-        <p><a href="res/Resume-RJF.pdf">Download a copy</a></p>
-      </center>
-    </div>
+          </center>
+      </div>
 
     <div class="container">
+
       <hr>
+
       <footer>
         <div class="row">
           <div class="col-lg-12">
@@ -91,8 +96,6 @@
           </div>
         </div>
       </footer>
-
-    </div><!-- /.container -->
 
     </div><!-- /.container -->
 
