--- a/officer_main.html
+++ b/officer_main.html
@@ -59,17 +59,21 @@
 
     <h2>Welcome, Officer Smith!</h2>
 
+    <img class="img-responsive" src="img/officer.png">
+
+    <br />
+
       <div class="row">
         <center>
           <button type="button" class="btn btn-default btn-lg">
-          <span class="glyphicon glyphicon-star"></span> Issue a New Ticket
+            Issue a New Ticket
           </button>
 
           <br />
           <br />
 
           <button type="button" class="btn btn-default btn-lg">
-          <span class="glyphicon glyphicon-star"></span> View Old Tickets
+            View Previous Tickets
           </button>
 
           <br />
@@ -78,7 +82,7 @@
           <br />
 
           <button type="button" class="btn btn-default btn-lg">
-          <span class="glyphicon glyphicon-star"></span> Sign Out
+            Sign Out
           </button>
 
           </center>
