--- a/manual_entry.html
+++ b/manual_entry.html
@@ -47,26 +47,38 @@
 
     <h3>Issue New Ticket</h3>
 
-      <div class="row">
-        <center>
-          <img class="img-responsive" src="img/capture.png">
-        </center>
-      </div>
+      <form>
+        Last Name: <br /> <input type="text" name="infraction">
+        <br />
+        First Name: <br /> <input type="text" name="infraction">
+        <br />
+        Date of Birth: <br /> <input type="text" name="infraction">
+        <br />
+        Gender: <br /> <input type="text" name="infraction">
+        <br />
+        Address Line 1: <br /> <input type="text" name="infraction">
+        <br />
+        Address Line 2: <br /> <input type="text" name="infraction">
+        <br />
+        City: <br /> <input type="text" name="infraction">
+        <br />
+        State: <br /> <input type="text" name="infraction">
+        <br />
+        Zip Code: <br /> <input type="text" name="infraction">
+        <br />
+      </form>
 
       <br />
       <br />
 
       <div class="row">
         <center>
-          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='manual_entry.html'">
-            Enter Information Manually
+          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='new_ticket.html'">
+            Back
           </button>
-
-          <br />
-          <br />
-
-          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='officer_main.html'">
-            Cancel
+          &nbsp; &nbsp; &nbsp;
+          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='new_ticket2.html'">
+            Next
           </button>
 
           </center>
