--- a/new_ticket2.html
+++ b/new_ticket2.html
@@ -27,27 +27,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Team Buddy Cops</a>
+          <a class="navbar-brand" href="Home.html">Team Buddy Cops</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="about.html">About</a></li>
-            <li><a href="http://blog.ryanfork.com">Blog</a></li>
-            <!--<li><a href="development.html">Development</a></li>-->
-            <li><a href="resume.html">Resume</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="contact.php">Contact</a></li>
-                <!--
-                <li><a href="full-width.html">Full Width Page</a></li>
-                <li><a href="sidebar.html">Sidebar Page</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="404.html">404</a></li>
-                <li><a href="pricing.html">Pricing Table</a></li>-->
-              </ul>
+            <li class="active"><a href="officer_main.html">Officer Home</a></li>
+            <li><a href="view_tickets.html">View Issued Tickets</a></li>
+            <li><a href="new_ticket.html">New Ticket</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -70,27 +58,11 @@
 
       <div class="row">
         <center>
-          <button type="button" class="btn btn-default btn-lg">
-            Issue a New Ticket
-          </button>
-
-          <br />
-          <br />
-
-          <button type="button" class="btn btn-default btn-lg">
-            View Old Tickets
-          </button>
-
-          <br />
-          <br />
-          <br />
-          <br />
-
-          <button type="button" class="btn btn-default btn-lg">
+          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='new_ticket.html'">
             Back
           </button>
           &nbsp; &nbsp; &nbsp;
-          <button type="button" class="btn btn-default btn-lg">
+          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='officer_main.html'">
             Finish
           </button>
 
@@ -104,7 +76,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <center><p>Copyright &copy; Ryan Fork 2013</p></center>
+            <center><p>Copyright &copy; Team Buddy Cops 2013</p></center>
           </div>
         </div>
       </footer>
