--- a/view_tickets.html
+++ b/view_tickets.html
@@ -45,28 +45,44 @@
     <div class="container">
     <center>
 
-    <h3>Issue New Ticket</h3>
+    <h2>Viewing Issued Tickets</h2>
 
       <div class="row">
         <center>
-          <img class="img-responsive" src="img/capture.png">
-        </center>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="row">
-        <center>
-          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='manual_entry.html'">
-            Enter Information Manually
+          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='officer_main.html'">
+            Home
           </button>
 
           <br />
           <br />
 
-          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='officer_main.html'">
-            Cancel
+          <h4>11/8/2013 @ 13:55 - Speeding</h4>
+          <button type="button" class="btn btn-default btn-lg">
+            Get Details
+          </button>
+
+          <br />
+          <br />
+
+          <h4>11/7/2013 @ 18:02 - Moving Violation</h4>
+          <button type="button" class="btn btn-default btn-lg">
+            Get Details
+          </button>
+
+          <br />
+          <br />
+          
+          <h4>11/7/2013 @ 12:27 - Speeding</h4>
+          <button type="button" class="btn btn-default btn-lg">
+            Get Details
+          </button>
+
+          <br />
+          <br />
+          
+          <h4>11/7/2013 @ 11:40 - Running Stop Sign</h4>
+          <button type="button" class="btn btn-default btn-lg">
+            Get Details
           </button>
 
           </center>
