Changed up the header bar and added a few missing pages.

--- a/ForgotPass.html
+++ b/ForgotPass.html
@@ -86,8 +86,8 @@
           <br />
           <small style="margin-left:15%;">***Check your email for new password***</small> 
           <br/>
-         <a href="Home.html" class="btn btn-primary" style="margin-bottom: 4%; margin-left: 20%;"> Cancel</a>
-         <a href="Login.html" class="btn btn-primary" style="margin-bottom: 4%; margin-left: 5%;"> Submit</a>
+         <a href="Home.html" class="btn btn-default btn-lg" style="margin-bottom: 4%; margin-left: 20%;"> Cancel</a>
+         <a href="Login.html" class="btn btn-default btn-lg" style="margin-bottom: 4%; margin-left: 5%;"> Submit</a>
          
          
         </div>
