--- a/Home.html
+++ b/Home.html
@@ -34,22 +34,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="*.html">About</a></li>
-            <li><a href="*.html">[Temp]</a></li>
-            <!--<li><a href="development.html">Development</a></li>-->
-            <li><a href="*.html">[Temp]</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="contact.php">Contact</a></li>
-                <!--
-                <li><a href="full-width.html">Full Width Page</a></li>
-                <li><a href="sidebar.html">Sidebar Page</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="404.html">404</a></li>
-                <li><a href="pricing.html">Pricing Table</a></li>-->
-              </ul>
-            </li>
+            <li class="active"><a href="Home.html">Home</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -73,12 +58,19 @@
         <div class="col-md-6">
           
         </div>
+        <center>
         <div class="col-md-6">
         <img class="img-responsive" src="img/officer.png">
-          <h2 style="margin-left: 20%;">Which Are You?</h2>
-         <a class="btn btn-primary" href="Login.html" style="margin-bottom: 4%; margin-left: 15%;" > Officer </a>
-         
-         <a href="find_ticket.html" class="btn btn-primary" style="margin-bottom: 4%; margin-left: 25%;">Citizen</a>
+          <h2>Which Are You?</h2>
+        <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='Login.html'">
+          Officer
+        </button>
+         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+         <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='citizen_find.html'">
+          Citizen
+        </button>
+         </center>
         </div>
 
       </div>
