--- a/NextStep.html
+++ b/NextStep.html
@@ -34,22 +34,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="*.html">About</a></li>
-            <li><a href="*.html">[Temp]</a></li>
-            <!--<li><a href="development.html">Development</a></li>-->
-            <li><a href="*.html">[Temp]</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="contact.php">Contact</a></li>
-                <!--
-                <li><a href="full-width.html">Full Width Page</a></li>
-                <li><a href="sidebar.html">Sidebar Page</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="404.html">404</a></li>
-                <li><a href="pricing.html">Pricing Table</a></li>-->
-              </ul>
-            </li>
+            <li class="active"><a href="Home.html">Home</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -93,11 +78,11 @@
           <br />
           <br />
           <br />
-         <a href="Home.html" class="btn btn-primary" style="margin-bottom: 4%; margin-left: 20%;"> Cancel </a>
+         <a href="Home.html" class="btn btn-default btn-lg" style="margin-bottom: 4%; margin-left: 20%;"> Cancel </a>
          
         
 
-         <a href="officer_main.html" class="btn btn-primary" style="margin-bottom: 4%; margin-left: 10%; "> Create Now!</a>
+         <a href="officer_main.html" class="btn btn-default btn-lg" style="margin-bottom: 4%; margin-left: 10%; "> Create Now!</a>
         </div>
 
       </div>
