--- a/find_ticket.html
+++ b/find_ticket.html
@@ -33,10 +33,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="officer_main.html">Officer Home</a></li>
-            <li><a href="view_tickets.html">View Issued Tickets</a></li>
-            <li><a href="new_ticket.html">New Ticket</a></li>
-            </li>
+            <li class="active"><a href="Home.html">Home</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
