--- a/new_ticket2.html
+++ b/new_ticket2.html
@@ -62,7 +62,7 @@
             Back
           </button>
           &nbsp; &nbsp; &nbsp;
-          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='officer_main.html'">
+          <button type="button" class="btn btn-default btn-lg" onClick="window.location.href='new_ticket_confirm.html'">
             Finish
           </button>
 
